--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/minhhoangtcu/firstHackDallas-Documents#readme",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
+    "express": "^4.14.0",
     "mongoose": "^4.6.6",
-    "node-wit": "^4.1.0"
+    "node-wit": "^4.1.0",
+    "request": "^2.78.0"
   }
 }
