--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/minhhoangtcu/firstHackDallas-Documents#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "clarifai": "^2.0.14",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "mongoose": "^4.6.6",
